--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,25 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  color: white;
+  text-align: center;
+  position: absolute;
+  height: 40px;
+  background: orange;
+  width: 100vw;
+  
+  span {
+    line-height: 40px;
+  }
+}
+
+footer {
+  background: grey;
+  position: absolute;
+  height: 40px;
+  width: 100vw;
+  bottom: 0;
 }
 
 .App-header {
